syntax = "proto3";

package book;

option go_package = "/";

service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse) {}
}


message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  string desc = 4;
}
